# Api/src/docs/openapi-autogenerated.yaml
@@ -534,6 +534,35 @@ paths:
           description: Validation error!
         '500':
           description: Internal Server error!
+  /recent-events/all:
+    get:
+      tags:
+        - Recent Events
+      security:
+        - Authorization: []
+      parameters:
+        - in: query
+          name: isActive
+          schema:
+            type: boolean
+          required: false
+          description: Activity status of recent event
+      summary: get all Mass recent events
+      responses:
+        '200':
+          description: Get Recent Events
+        '401':
+          description: Invalid credentials
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: Invalid credentials
+        '500':
+          description: Internal Server error
   /recent-events:
     post:
       tags:
@@ -587,6 +616,72 @@ paths:
           description: Validation error
         '500':
           description: Internal Server error
+  /recent-events/{id}:
+    put:
+      tags:
+        - Recent Events
+      security:
+        - Authorization: []
+      summary: Update a recent event
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: integer
+          description: Recent Event ID
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                title:
+                  type: string
+                  example: Recent event
+                  description: Recent event title
+                description:
+                  type: string
+                  example: description
+                  description: Recent event description
+                isActive:
+                  type: boolean
+                  example: 'false'
+                  description: Activation state of the recent event
+      responses:
+        '200':
+          description: Recent Event saved successfully
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                    example: true
+                  message:
+                    type: string
+                    example: Recent Event updated successfully.
+        '401':
+          description: Invalid credentials!
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                    example: false
+                  message:
+                    type: string
+                    example: Invalid credentials!
+        '404':
+          description: Recent Event not found!
+        '422':
+          description: Validation error!
+        '500':
+          description: Internal Server error!
   /roles/delete/{id}:
     get:
       tags:
